--- a/src/meson.build
+++ b/src/meson.build
@@ -2,6 +2,14 @@
 #  compress.cpp.executable and uncompress.cpp.executable
 subdir('bitStream')
 subdir('encoder')
+# src = library('src',
+#     sources:['compress.cpp', 'FileUtils.hpp','uncompress.cpp'],
+#     dependencies: [bitStream_dep, encoder_dep])
+     
+inc = include_directories('.')
+
+# src_dep = declare_dependency(include_directories: inc,
+#     link_with: src, dependencies: [bitStream_dep, input_dep, output_dep, encoder_dep])
 
 compress_exe = executable('compress.cpp.executable',
     sources: ['compress.cpp'],
@@ -12,3 +20,5 @@ uncompress_exe = executable('uncompress.cpp.executable',
     sources: ['uncompress.cpp'],
     dependencies : [encoder_dep, bitStream_dep, input_dep, output_dep],
     install : true)
+
+
