--- a/meson.build
+++ b/meson.build
@@ -4,7 +4,8 @@ project('pa3_HuffmanCode', 'cpp',
                      'b_coverage=true',
                      'cpp_std=c++14'])
 
-
+cxxopts_proj = subproject('cxxopts')
+cxxopts_dep = cxxopts_proj.get_variable('cxxopts_dep')
 # === src dependencies ===
 # === end src dependencies ===
 subdir('src')
